[metadata]
name = pyshortcuts
description = Create desktop and Start Menu shortcuts for python scripts
long_description =
    Pyshortcuts helps developers and Python users to create shortcuts on a
    Users Desktop or Start Menu that will run python scripts and applications.
    Pyshortcuts is cross-platform, supporting Windows, MacOS, and Linux each in
    the way most natural for the OS.  On Windows, a Shortcut or Link is
    created.  On Linux a ".desktop" file is created.  On MacOS, a minimal
    Application is created.  In all cases, the shortcuts are put either
    directly on the Desktop or Start Menu , or in a folder on the Desktop or
    Start Menu of the current user.  That means that there is not need for
    elevated permission or writing to system-level files (registry,
    /Applications, /usr/bin).  The user has complete control to rename, move,
    or delete the shortcut after it is created.  Shortcuts can have a custom
    icon (`.ico` files on Windows or Linux, or `.icns` files on MacOS)
    specified, defaulting to a Python icon included with the pyshortcuts
    module. Pyshortcuts is pure python, has a small footprint and is very easy
    to install and use either from a python script.  That is to say, it can
    easily be part of a installation (or post-installation process) process for
    larger packages.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/pyshortcuts
license = MIT License
platforms = any
version  = 1.9.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source =  https://github.com/newville/pyshortcuts
    Documentation = https://github.com/newville/pyshortcuts/README.md
    Tracker = https://github.com/newville/pyshortcuts/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    pywin32 ; platform_system== "Windows"

[options.package_data]
* = icons/*

[options.entry_points]
console_scripts =
    pyshortcut = pyshortcuts:shortcut_cli

[options.packages.find]
include = pyshortcuts
